--- a/src/components/path-of-exile/_styles.scss
+++ b/src/components/path-of-exile/_styles.scss
@@ -89,5 +89,5 @@
   --poe-color-craftinglife: rgb(201, 110, 110);
   --poe-color-craftingdefences: rgb(168, 143, 103);
   --poe-color-craftingattack: rgb(218, 129, 77);
-  --poe-color-node-titel: rgb(238, 228, 146);
+  --poe-color-node-title: rgb(238, 228, 146);
 }
